--- a/package.json
+++ b/package.json
@@ -4,8 +4,28 @@
   "description": "challenge",
   "main": "index.js",
   "scripts": {
-    "test": "testcafe chrome page_model/test/"
+    "lint": "eslint . --ext ts",
+    "lint:fix": "eslint . --ext ts --fix",
+    "e2e:chrome": "testcafe chrome ./page_model/test/**/*.spec.ts",
+    "e2e:firefox": "testcafe firefox ./page_model/test/**/*.spec.ts",
+    "e2e:edge": "testcafe edge ./page_model/test/**/*.spec.ts",
+    "e2e:ie": "testcafe ie ./page_model/test/**/*.spec.ts",
+    "e2e:headless": "testcafe chrome:headless ./page_model/test/**/*.spec.ts",
+    "test:multi-browser": "run-p -l e2e:chrome e2e:firefox e2e:edge e2e:ie"
   },
   "author": "Gabriela Moreno Quintana",
-  "license": "ISC"
+  "contributors": [
+    {
+      "name": "Hugo Virgen",
+      "url": "https://github.com/virgenherrera"
+    }
+  ],
+  "license": "ISC",
+  "devDependencies": {
+    "eslint": "^7.22.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.2.1",
+    "testcafe": "^1.12.0",
+    "typescript": "^4.2.3"
+  }
 }
