--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "headless": "testcafe chrome:headless ./page_model/test/**/*.spec.ts",
     "lint": "eslint ./page_model/ --ext ts",
-    "lint:fix": "eslint . --ext ts --fix",
+    "lint:fix": "eslint ./page_model/ --ext ts --fix",
     "e2e:chrome": "testcafe chrome ./page_model/test/**/*.spec.ts",
     "e2e:firefox": "testcafe firefox ./page_model/test/**/*.spec.ts",
     "e2e:edge": "testcafe edge ./page_model/test/**/*.spec.ts",
@@ -23,6 +23,8 @@
   ],
   "license": "ISC",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
     "eslint": "^7.22.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
